--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
   "keywords": [
     "llm",
     "ai",
-    "vitest",
-    "rslib",
     "zod"
   ],
   "publishConfig": {
@@ -46,10 +44,6 @@
   },
   "dependencies": {
     "ai": "^4.3.9",
-    "mdbox": "^0.1.1",
-    "pathe": "^2.0.3",
-    "prettier": "^3.5.3",
-    "vitest": "^3.1.1",
     "zod": "^3.24.3"
   },
   "devDependencies": {
@@ -60,7 +54,9 @@
     "dotenv": "^16.5.0",
     "eslint": "^9.25.0",
     "eslint-plugin-format": "^1.0.1",
+    "prettier": "^3.5.3",
     "typescript": "^5.8.3",
-    "vite": "^6.3.2"
+    "vite": "^6.3.2",
+    "vitest": "^3.1.1"
   }
 }
